<resources>
    <string name="app_name">Omniheroes</string>
    <string name="done">done</string>
    <string name="game_play_invite_double_args" formatted="false">%s and %s (double)have invited you to play Monopoly</string>
    <string name="game_play_invite_null_args">No one has invited you to play Monopoly</string>
    <string name="game_play_invite_single_args">%s (single)has invited you to play Monopoly</string>
    <string name="go">go</string>
    <string name="healthy_tips">健康游戏忠告</string>
    <string name="healthy_tips1">抵制不良游戏    拒绝盗版游戏</string>
    <string name="healthy_tips2">注意自我保护    谨防受骗上当</string>
    <string name="healthy_tips3">适度游戏益脑    沉迷游戏伤身</string>
    <string name="healthy_tips4">合理安排时间    享受健康生活</string>
    <string name="next">next</string>
    <string name="search">search</string>
    <string name="send">send</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="default_filedownloader_notification_content">FileDownloader is running.</string>
    <string name="default_filedownloader_notification_title">FileDownloader</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="search_menu_title">Search</string>
    <string name="u8_permission_confirm_cancel">拒绝并退出</string>
    <string name="u8_permission_confirm_ok">同 意</string>
    <string name="u8_permission_confirm_title">用户隐私协议说明</string>
    <string name="u8_permission_confirm_txt1">继续游戏前，建议您先阅读并同意：</string>
    <string name="u8_permission_confirm_txt2">游戏收集的信息，仅用于改善您的游戏体验，我们将保护您的信息安全和个人隐私。</string>
    <string name="u8_permission_desc">我们将向您申请以下权限（图标点击可查看具体用途）：</string>
    <string name="u8_permission_detail_ok">确 定</string>
    <string name="u8_permission_detail_title">权限使用说明</string>
    <string name="u8_permission_exit_tip">亲爱的玩家，感谢您的下载和体验，游戏即将退出。</string>
    <string name="u8_permission_ok">确 定</string>
    <string name="u8_permission_protocol">《用户隐私保护协议》</string>
    <string name="u8_permission_read">我已阅读并同意</string>
    <string name="u8_permission_tip">请阅读并同意《用户隐私保护协议》</string>
    <string name="u8_permission_title">权限申请说明</string>
    <string name="u8_protocol_agree_desc">如您同意，请点击“同意”开始接受我们的服务。</string>
    <string name="u8_protocol_and">及</string>
    <string name="u8_protocol_desc">感谢您使用本游戏，您使用本游戏应当仔细阅读并同意《用户服务协议》及《用户隐私协议》，请点击同意开始接受我们的服务。</string>
    <string name="u8_protocol_desc1">感谢您使用本游戏，您使用本游戏应当仔细阅读并同意</string>
    <string name="u8_protocol_desc_custom">"为向您提供游戏服务，我们可能在您使用过程中，获取以下权限及信息，您可以在设备设置中查看并管理您的权限。

设备信息:为方便您找回丢失的账号密码，保障账号安全，我们将会收集您的设备信息。
存储权限:用于访问您的存储空间，向您提供游戏资源缓存、下载游戏资源包的服务。"</string>
    <string name="u8_protocol_desc_old">请您务必仔细阅读并充分理解服务协议和隐私政策各条款，包括但不限于：为了向您提供完善的游戏服务，我们需要收集您的设备信息、操作日志等个人信息，并使用您的设备存储功能等。 您可以在设备设置功能中查看、变更、删除个人信息并管理您的授权。</string>
    <string name="u8_protocol_detail">了解详细信息。</string>
    <string name="u8_protocol_private">《用户隐私协议》</string>
    <string name="u8_protocol_private_simple">隐私协议</string>
    <string name="u8_protocol_read">您可阅读</string>
    <string name="u8_protocol_title">隐私协议保护指引</string>
    <string name="u8_protocol_user">《用户服务协议》</string>
    <string name="u8_protocol_user_simple">用户协议</string>
    <string name="x7_agree">同意</string>
    <string name="x7_cancel">取消</string>
    <string name="x7_game_personal_protocol">小7手游個人信息保護協議</string>
    <string name="x7_game_privacy_tip">游戲隱私政策由游戲開發者提供，可跳轉外部瀏覽器查看</string>
    <string name="x7_go_to_read">前往查看</string>
    <string name="x7_logout_success">登出成功</string>
    <string name="x7_permission_announcement">權限聲明</string>
    <string name="x7_permission_calendar">日曆</string>
    <string name="x7_permission_calendar_declaration">進行日曆提醒需使用</string>
    <string name="x7_permission_camera">相機</string>
    <string name="x7_permission_camera_declaration">上傳照片可直接拍照上傳</string>
    <string name="x7_permission_contacts">聯繫人</string>
    <string name="x7_permission_contacts_declaration">以便獲取您的聯繫人信息進行好友推薦，分享</string>
    <string name="x7_permission_exit">拒絕並退出</string>
    <string name="x7_permission_location">位置</string>
    <string name="x7_permission_location_declaration">獲取您的位置信息用於個人信息展示</string>
    <string name="x7_permission_microphone">麥克風</string>
    <string name="x7_permission_microphone_declaration">語音錄製上傳與語音通信時需使用</string>
    <string name="x7_permission_phone">手機</string>
    <string name="x7_permission_phone_declaration">獲取你的設備信息用於保證您的賬號安全</string>
    <string name="x7_permission_sensors">傳感器</string>
    <string name="x7_permission_sensors_declaration">部分遊戲需獲取設備傳感器信息保證特殊功能使用</string>
    <string name="x7_permission_sms">短信</string>
    <string name="x7_permission_sms_declaration">短信相關認證功能可自動驗證短信內容</string>
    <string name="x7_permission_storage">存儲卡</string>
    <string name="x7_permission_storage_declaration">存儲緩存數據，提高應用流暢度</string>
    <string name="x7_pms_ins_content" formatted="false">小7手游正在向您獲取“%s”許可權，同意後，將用於%s</string>
    <string name="x7_pms_ins_title">%s許可權使用說明</string>
    <string name="x7_privacy_explain">"歡迎下載小7遊戲，我們非常重視個人信息和隱私保護。在使用小7遊戲前，請詳細閱讀並同意《小7手游用戶協議》、《小7手游隱私政策》和《遊戲隱私政策》。 
為了給您提供良好的遊戲體驗，我們會向您申請部分必要的敏感權限。您可選擇同意或拒絕本相應權限的申請，如果您選擇拒絕可能會導致遊戲中部分功能體驗異常。敏感權限包括："</string>
    <string name="x7_privacy_explain_only_us">"歡迎下載小7遊戲，我們非常重視個人信息和隱私保護。在使用小7遊戲前，請詳細閱讀並同意《小7手游用戶協議》和《小7手游隱私政策》。 
為了給您提供良好的遊戲體驗，我們會向您申請部分必要的敏感權限。您可選擇同意或拒絕本相應權限的申請，如果您選擇拒絕可能會導致遊戲中部分功能體驗異常。敏感權限包括："</string>
    <string name="x7_sdk_base_permission_affect_calendar">添加日歷提醒使用</string>
    <string name="x7_sdk_base_permission_affect_camera">掃碼或拍攝上傳照片使用</string>
    <string name="x7_sdk_base_permission_affect_linkman">獲取您的聯系人信息，以便於推薦或分享給好友</string>
    <string name="x7_sdk_base_permission_affect_location">獲取您的位置信息用於個人信息展示或部分遊戲定位功能使用</string>
    <string name="x7_sdk_base_permission_affect_memory">存儲遊戲緩存數據，提高遊戲流暢度</string>
    <string name="x7_sdk_base_permission_affect_microphone">錄製語言或實時通訊使用</string>
    <string name="x7_sdk_base_permission_affect_note">用於短信驗證功能自動獲取驗證</string>
    <string name="x7_sdk_base_permission_affect_other">部分遊戲功能需獲取該功能權限以保證遊戲功能穩定運行</string>
    <string name="x7_sdk_base_permission_affect_sensor">部分遊戲需獲取設備傳感器信息以保證特殊功能正常運行</string>
    <string name="x7_sdk_base_permission_affect_state">獲取您的設備信息，用於保護您的賬號安全</string>
    <string name="x7_sdk_base_permission_other">x7權限</string>
    <string name="x7_warm_tip">溫馨提醒</string>
    <string name="account_copy">賬號：</string>
    <string name="action_settings">Settings</string>
    <string name="again_input_password">再輸入一次密碼</string>
    <string name="agin_input_password">再輸入一次密碼</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_info_failure">角色信息調用失敗：角色信息</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_to_restart">Click to try again</string>
    <string name="confirm_modify">確認修改</string>
    <string name="copy_account_success">複製賬號成功</string>
    <string name="decimalSeparator">.</string>
    <string name="dialog_hide_record">確定要隱藏消費記錄嗎？</string>
    <string name="ensure_hide">確定隱藏</string>
    <string name="error_icon_content_description">Error</string>
    <string name="replay">Replay</string>
    <string name="video_loading_failed">Video loading failed</string>
    <string name="x7_base_loading">加载中</string>
    <string name="x7_exit_app">退出app</string>
    <string name="x7_know">我知道了</string>
    <string name="x7_notice">公告</string>
    <string name="xrefreshview_footer_hint_ready">松开载入更多</string>
    <string name="xrefreshview_header_hint_loaded">加载完成</string>
</resources>