<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_solid_white_ffffff_corner_lt_rt_15" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textColor="@color/base_theme_color" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/x7_notice" />
    <TextView android:textSize="14.0dip" android:textColor="@color/base_black_3" android:id="@id/notice_content_tv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:layout_marginBottom="14.0dip" android:layout_marginStart="33.0dip" android:layout_marginEnd="33.0dip" />
    <TextView android:textSize="15.0dip" android:textColor="@color/base_white" android:gravity="center" android:id="@id/know_tv" android:background="@drawable/bg_solid_green_12cdb0_corner_24" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/x7_know" android:layout_marginStart="72.0dip" android:layout_marginEnd="72.0dip" />
    <TextView android:textSize="15.0dip" android:textColor="@color/base_black_9" android:layout_gravity="center_horizontal" android:id="@id/exit_app_tv" android:paddingTop="12.0dip" android:paddingBottom="14.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x7_exit_app" android:paddingStart="12.0dip" android:paddingEnd="12.0dip" />
</LinearLayout>
