<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center_horizontal" android:id="@id/xrefreshview_footer_content" android:background="@color/base_white" android:layout_width="fill_parent" android:layout_height="50.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/xrefreshview_footer_loading_ll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <com.airbnb.lottie.LottieAnimationView android:layout_width="18.0dip" android:layout_height="18.0dip" app:lottie_autoPlay="true" app:lottie_fileName="x7_baselib_loading_lottie.json" app:lottie_imageAssetsFolder="images" app:lottie_loop="true" />
        <TextView android:textSize="12.0dip" android:textColor="@color/base_black_9" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x7_base_loading" android:layout_marginStart="7.0dip" />
    </LinearLayout>
    <TextView android:textSize="12.0dip" android:gravity="center" android:id="@id/xrefreshview_footer_hint_textview" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/xrefreshview_header_hint_loaded" android:layout_centerInParent="true" android:paddingStart="15.0dip" android:paddingEnd="15.0dip" />
    <TextView android:textSize="12.0dip" android:gravity="center" android:id="@id/xrefreshview_footer_click_textview" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/xrefreshview_footer_hint_ready" android:layout_centerInParent="true" />
</RelativeLayout>
