<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#00000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/u8_dialog_corner_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <RelativeLayout style="@style/u8_common_title">
            <TextView android:text="@string/u8_permission_confirm_title" style="@style/u8_common_title_txt" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip">
            <TextView android:textSize="@dimen/u8_common_textsize_s" android:textColor="@color/u8_dark" android:ellipsize="end" android:id="@id/u8_protocol_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_margin="2.0dip">
            <Button android:textSize="@dimen/u8_common_textsize_s" android:textStyle="bold" android:textColor="@color/u8_btn_gray" android:gravity="center" android:id="@id/u8_protocol_cancel" android:background="@drawable/u8_corner_gray" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="35.0dip" android:layout_marginLeft="6.0dip" android:layout_marginTop="1.0dip" android:layout_marginBottom="1.0dip" android:text="@string/u8_permission_confirm_cancel" android:layout_weight="1.0" />
            <Button android:textSize="@dimen/u8_common_textsize_s" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/u8_protocol_ok" android:background="@drawable/u8_corner_button" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="35.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="6.0dip" android:layout_marginBottom="1.0dip" android:text="@string/u8_permission_confirm_ok" android:layout_weight="1.0" />
        </LinearLayout>
        <View android:layout_height="10.0dip" style="@style/u8_common_divide" />
    </LinearLayout>
</RelativeLayout>
