<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/black" android:descendantFocusability="afterDescendants" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/surface_container" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <ImageView android:id="@id/poster" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="fitXY" android:adjustViewBounds="true" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:layout_alignParentStart="true" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/layout_bottom" android:background="@drawable/jz_bottom_bg" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/x7_50dp" android:layout_alignParentBottom="true">
        <TextView android:textSize="@dimen/x7_15dp" android:textColor="#ffffffff" android:id="@id/current" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="00:00" android:layout_marginStart="@dimen/x7_14dp" />
        <SeekBar android:layout_gravity="center_vertical" android:id="@id/bottom_seek_progress" android:background="@null" android:paddingTop="@dimen/x7_8dp" android:paddingBottom="@dimen/x7_8dp" android:layout_width="@dimen/x7_0dp" android:layout_height="wrap_content" android:maxHeight="@dimen/x7_1dp" android:max="100" android:progressDrawable="@drawable/jz_bottom_seek_progress" android:minHeight="@dimen/x7_1dp" android:thumb="@drawable/jz_bottom_seek_poster" android:layout_weight="1.0" android:paddingStart="@dimen/x7_12dp" android:paddingEnd="@dimen/x7_12dp" />
        <TextView android:textSize="@dimen/x7_15dp" android:textColor="#ffffffff" android:id="@id/total" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="00:00" android:paddingEnd="@dimen/x7_14dp" />
        <TextView android:textSize="@dimen/x7_15dp" android:textColor="#ffffffff" android:id="@id/clarity" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="clarity" android:textAlignment="center" android:paddingStart="@dimen/x7_20dp" />
        <ImageView android:id="@id/fullscreen" android:layout_width="@dimen/x7_52.5dp" android:layout_height="fill_parent" android:src="@drawable/jz_enlarge" android:scaleType="centerInside" android:paddingStart="@dimen/x7_14dp" android:paddingEnd="@dimen/x7_14dp" />
    </LinearLayout>
    <ProgressBar android:id="@id/bottom_progress" android:layout_width="fill_parent" android:layout_height="@dimen/x7_1.5dp" android:max="100" android:progressDrawable="@drawable/jz_bottom_progress" android:layout_alignParentBottom="true" style="?android:progressBarStyleHorizontal" />
    <ImageView android:id="@id/back_tiny" android:background="@drawable/jz_click_back_tiny_selector" android:visibility="gone" android:layout_width="@dimen/x7_24dp" android:layout_height="@dimen/x7_24dp" android:layout_marginTop="@dimen/x7_6dp" android:layout_marginStart="@dimen/x7_6dp" />
    <RelativeLayout android:id="@id/layout_top" android:paddingLeft="@dimen/x7_10dp" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/x7_48dp" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:paddingStart="@dimen/x7_10dp" android:layout_alignParentStart="true">
        <ImageView android:id="@id/back" android:padding="@dimen/x7_3dp" android:layout_width="@dimen/x7_26dp" android:layout_height="@dimen/x7_26dp" android:layout_marginTop="@dimen/x7_12dp" android:src="@drawable/jz_click_back_selector" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentStart="true" />
        <TextView android:textSize="@dimen/x7_18dp" android:textColor="#ffffffff" android:ellipsize="end" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x7_12dp" android:maxLines="2" android:layout_toRightOf="@id/back" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/x7_12dp" android:layout_toStartOf="@id/battery_time_layout" android:layout_toEndOf="@id/back" />
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/battery_time_layout" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x7_14dp" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/x7_14dp" android:layout_alignParentEnd="true">
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/battery_level" android:background="@drawable/jz_battery_level_10" android:layout_width="@dimen/x7_23dp" android:layout_height="@dimen/x7_10dp" />
            <TextView android:textSize="@dimen/x7_12dp" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@id/video_current_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" />
        </LinearLayout>
    </RelativeLayout>
    <ProgressBar android:id="@id/loading" android:visibility="invisible" android:layout_width="@dimen/jz_start_button_w_h_normal" android:layout_height="@dimen/jz_start_button_w_h_normal" android:indeterminateDrawable="@drawable/jz_loading" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    <LinearLayout android:layout_gravity="center_vertical" android:id="@id/start_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <ImageView android:id="@id/start" android:layout_width="@dimen/jz_start_button_w_h_normal" android:layout_height="@dimen/jz_start_button_w_h_normal" android:src="@drawable/jz_click_play_selector" />
    </LinearLayout>
    <TextView android:textSize="@dimen/x7_12dp" android:textColor="#ffffffff" android:id="@id/replay_text" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x7_6dp" android:text="@string/replay" android:layout_below="@id/start_layout" android:layout_centerHorizontal="true" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/retry_layout" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <TextView android:textSize="@dimen/x7_14dp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_loading_failed" />
        <TextView android:textSize="@dimen/x7_14dp" android:textColor="@android:color/white" android:id="@id/retry_btn" android:background="@drawable/jz_retry" android:paddingTop="@dimen/x7_4dp" android:paddingBottom="@dimen/x7_4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x7_15dp" android:text="@string/click_to_restart" android:paddingStart="@dimen/x7_9dp" android:paddingEnd="@dimen/x7_9dp" />
    </LinearLayout>
</RelativeLayout>
